--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,15 +11,18 @@
 
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
-    <script type="text/x-mathjax-config">
+    {% if page.use_math %}
+      {% include mathjax_support.html %}
+    {% endif %}
+    <!--<script type="text/x-mathjax-config">
       MathJax.Hub.Config({
         "HTML-CSS": {
           fonts: ["Latin-Modern"]
         }
       });
     </script>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-
+    <script async src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
+    -->
     <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
   </head>
 
